# livekit-cli

./: .gitattributes  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yaml  .nanparc  Dockerfile  Dockerfile-loadtester  LICENSE  Makefile  README.md  bright-README.md  bright-make.mk  deloyment.yaml  deploy.sh  flake.nix  go.mod  go.sum  gomod2nix.toml  install-cli.sh  loadtester.go  renovate.json  stats.go  taskfile.yaml  version.go
.github/: bump-version.sh
.github/workflows/: build-binaries.yaml  build.yaml  bump.yml  docker.yaml  install-test.yaml  release.yaml  release.yml  session-e2e.yaml  test-windows.yaml  test.yaml  windows.yaml
.nanpa/: 2131758.kdl  agent-hosting-upload-management.kdl  agent-hosting-uploads.kdl  agent-hosting-workflow-improvements.kdl  agent-hosting.kdl  agent-load-testing-review-changes.kdl  agent-load-testing.kdl  ascii.kdl  dev-flag.kdl  exit-1.kdl  forward-participant.kdl  list-agents.kdl  no-license.kdl  project-config-subdomain.kdl  room-join-attr.kdl  sip-outbound-sync.kdl  sip-update.kdl
Formula/: lk.rb
autocomplete/: bash_autocomplete  fish_autocomplete  zsh_autocomplete
cmd/livekit-cli/: egress.go  ingress.go  join.go  join_test.go  loadtest.go  main.go  obfuscated.go  project.go  proto.go  record.go  recording.go  room.go  sip.go  token.go  ulimit_unix.go  ulimit_windows.go  utils.go
cmd/livekit-load-tester/: main.go  ulimit_unix.go
cmd/lk/: agent.go  agent_dev.go  agent_dev_test.go  agent_dispatch.go  agent_loadtest.go  agent_run.go  (+70 more)
cmd/lk/testdata/echo-agent/: agent.py  pyproject.toml
scripts/: setup-cross.sh
(+228 files in other folders)
