# uv project marker. The daemon launches via `uv run --no-sync`, so deps must
# be installed up front (CI runs `uv sync`; see session-e2e.yaml).
[project]
name = "lk-session-e2e-echo-agent"
version = "0"
requires-python = ">=3.12"
dependencies = ["livekit-agents", "python-dotenv"]

[tool.uv]
package = false
